--- a/push-notifications/package.json
+++ b/push-notifications/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@capacitor/push-notifications",
-  "version": "1.0.2",
+  "name": "ud-push-notifications",
+  "version": "1.0.0",
   "description": "The Push Notifications API provides access to native push notifications.",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
