--- a/push-notifications/android/src/main/AndroidManifest.xml
+++ b/push-notifications/android/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.capacitorjs.plugins.pushnotifications">
+    package="ud.pushnotifications">
 
     <application>
-        <service android:name="com.capacitorjs.plugins.pushnotifications.MessagingService" android:exported="false">
+        <service android:name=".MessagingService" android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
